# system-icon-theme

./: Makefile  README.md
src/: Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  configure  configure.ac  fedora-icon-theme.spec
src/po/: POTFILES.in
src/theme/: Makefile.am  Makefile.in  index.theme.in
