SUBDIRS = theme po

EXTRA_DIST = ChangeLog                                                         \
             README                                                            \
             intltool-extract.in                                               \
             intltool-merge.in                                                 \
             intltool-update.in                                                \
             fedora-icon-theme.spec

DISTCLEANFILES = intltool-extract                                              \
                 intltool-merge                                                \
                 intltool-update 

MAINTAINERCLEANFILES = aclocal.m4                                              \
                       config.guess                                            \
                       config.sub                                              \
                       configure                                               \
                       install-sh                                              \
                       intltool-extract.in                                     \
                       intltool-merge.in                                       \
                       intltool-update.in                                      \
                       ltmain.sh                                               \
                       Makefile.in                                             \
                       missing
