MAINTAINERCLEANFILES = Makefile.in
DISTCLEANFILES = index.theme

icondir = $(ICON_THEME_DIR)/System
nobase_dist_icon_DATA =                                                       \
			16x16/apps/openofficeorg-base.png                     \
			24x24/apps/openofficeorg-base.png                     \
			32x32/apps/openofficeorg-base.png                     \
			48x48/apps/openofficeorg-base.png                     \
			16x16/apps/openofficeorg-impress.png                  \
			24x24/apps/openofficeorg-impress.png                  \
			32x32/apps/openofficeorg-impress.png                  \
			48x48/apps/openofficeorg-impress.png                  \
			16x16/apps/openofficeorg-math.png                     \
			24x24/apps/openofficeorg-math.png                     \
			32x32/apps/openofficeorg-math.png                     \
			48x48/apps/openofficeorg-math.png                     \
			16x16/apps/openofficeorg-draw.png                     \
			24x24/apps/openofficeorg-draw.png                     \
			32x32/apps/openofficeorg-draw.png                     \
			48x48/apps/openofficeorg-draw.png                     \
			16x16/apps/openofficeorg-writer.png                   \
			24x24/apps/openofficeorg-writer.png                   \
			32x32/apps/openofficeorg-writer.png                   \
			48x48/apps/openofficeorg-writer.png                   \
			16x16/apps/openofficeorg-calc.png                     \
			24x24/apps/openofficeorg-calc.png                     \
			32x32/apps/openofficeorg-calc.png                     \
			48x48/apps/openofficeorg-calc.png                     \
			48x48/apps/redhat-internet.png                        \
			48x48/apps/redhat-starthere.png                       \
			48x48/apps/redhat-main-menu.png                       \
			48x48/apps/redhat-system_settings.png                 \
			48x48/apps/redhat-accessories.png                     \
			48x48/apps/redhat-office.png                          \
			48x48/apps/redhat-system_tools.png                    \
			48x48/apps/redhat-applications.png                    \
			48x48/apps/redhat-preferences.png                     \
			48x48/apps/redhat-tools.png                           \
			48x48/apps/redhat-email.png                           \
			48x48/apps/redhat-presentations.png                   \
			48x48/apps/redhat-web-browser.png                     \
			48x48/apps/redhat-extras.png                          \
			48x48/apps/redhat-programming.png                     \
			48x48/apps/redhat-word-processor.png                  \
			48x48/apps/redhat-games.png                           \
			48x48/apps/redhat-server_settings.png                 \
			48x48/apps/temp-home.png                              \
			48x48/apps/redhat-graphics.png                        \
			48x48/apps/redhat-sound_video.png                     \
			48x48/apps/redhat-home.png                            \
			48x48/apps/redhat-spreadsheet.png                     \
                        index.theme

@INTLTOOL_THEME_RULE@

EXTRA_DIST = $(icon_DATA) index.theme.in
